# isotope

./: README.md  index.css  index.html  package-lock.json  package.json  splashscreen.html  tailwind.config.cjs  tailwind.config.js
src/: App.tsx  splashscreen.tsx  tool-call-history.tsx  tool-info-pane.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  model.rs  model_manager.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs  pool.rs
src-tauri/src/models/: mod.rs  model.rs  model_manager.rs
src-tauri/src/models/chat_manager/: chat_manager.rs  mod.rs
src-tauri/src/models/inference_params_manager/: inference_params_manager.rs  mod.rs
src-tauri/src/models/llama/: llama_models.rs  llama_options.rs  mod.rs
src-tauri/src/utils/: mod.rs  model_loading_utils.rs  path_utils.rs
src/components/: titlebar.tsx
src/components/sidebar/: chat-history.tsx  model-parameters.tsx  sidebar.tsx
src/components/ui/: sidebar.tsx
src/constants/: prompts.ts
src/files_for_ai/: main.py  test.txt
src/hooks/: useGetSystemPrompt.tsx  useListen.tsx  use_get_chat_history.tsx  use_get_current_chat.tsx  use_get_current_chat_id.tsx  use_get_current_inference_params.tsx  use_get_model_options.tsx  use_get_selected_model.tsx
src/screens/: index.tsx
src/services/: ollama.ts
src/tools/: ListAccessibleFiles.ts  getWeather.ts  index.ts  readFile.ts  writeFile.ts
