[package]
name = "tauri_template"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-unminimize", "window-start-dragging", "window-unmaximize", "window-show", "window-minimize", "window-maximize", "window-close", "window-hide", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.20.3"
candle-core = "0.7.2"
candle-onnx = "0.7.2"
protobuf = "3.7.1"
candle-transformers = "0.7.2"
candle-nn = "0.7.2"
rand = "0.8.5"
anyhow = "1.0.93"
hf-hub = "0.3.2"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
dotenv = "0.15.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
